Working with the left part (initially)

--- a/styles.css
+++ b/styles.css
@@ -28,5 +28,17 @@ body{
 
 .right{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+}
+
+.first{
+    height: 33vh;
+}
+
+.second{
+    height: 33vh;
+}
+
+.third{
+    height: 33vh;
 }
