--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,15 @@
     src: url(./fonts/Norse-Bold.otf);
 }
 
-
-
 body{
     margin: 0;
     padding: 0;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .main{
     display: flex;
+
     flex-direction: row;
     width: 100vw;
     height: 100vh;
@@ -23,22 +23,145 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
-    font-family: Norse-Bold, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 .right{
     display: flex;
     flex-direction: column;
+    background-color: #fafafa;
+    width: 65vw;
 }
 
 .first{
-    height: 33vh;
+    height: 25vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    margin-left: 5%;
+    margin-bottom: 5%;
 }
 
-.second{
+.second {
     height: 33vh;
+    background-color: white;
+    align-items: center;
+    box-shadow: 3px 3px 5px #E5E7EB;
+}
+
+form > div {
+    padding-top: 10px;
+}
+
+form > div > h3 {
+    margin-left: 50px;
+}
+
+.form-main-div {
+    display: flex;
+    flex-direction: row;
+    margin-left: 50px;
+    width: 60%;
+    justify-content: space-between;
+}
+
+.form-div {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+input{
+    width: 220px;
+    border: 1px solid #E5E7EB;
+    height: 25px;
+    border-radius: 5px;
+}
+
+input:focus{
+    border: 1px solid blue !important; /* 优先级提升 */
+    outline: none; /* 移除浏览器默认聚焦样式 */
+}
+
+input:invalid{
+    border: 1px solid red;
+}
+
+label{
+    font-size: 10px;
+    color: #3b3b3b;
+}
+
+#error{
+    color: red;
+    font-size: 10px;
+    margin: 1px;
+}
+
+.btn-green{
+    background-color: #596D48;
+    color: white;
+    font-size: 1rem;
+    font-weight: bolder;
+    border: 1px solid #596D48;
+    border-radius: 7px;
+    height: 40px;
+    width: 180px;
+    box-shadow: 3px 3px 5px #E5E7EB;
+
 }
 
 .third{
-    height: 33vh;
+    margin-left: 50px;
+    margin-top: 25px;
+}
+
+.hyperlink{
+    margin-left: 50px;
+    margin-top: 15px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.login {
+    color: #596D48;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.a-footer{
+    color: white;
+}
+
+.p-footer {
+    font-size: 12px;
+    text-align: center;
+}
+
+.forImage {
+    height: 40vh;
+    display: flex;
+    align-items: flex-end;
+}
+
+.forFooter {
+    height: 60vh;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.semi-transparent {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+h1 {
+    font-size: 70px;
+    font-family: Norse-Bold, sans-serif;
 }
